добавляет тег svg

--- a/index.html
+++ b/index.html
@@ -139,6 +139,36 @@
               <div class="team-item-content">
                 <h4 class="name-title">Игорь Демьяненко</h4>
                 <p class="position" lang="en">Product Designer</p>
+                <ul>
+                  <li>
+                    <a href="">
+                      <svg>
+                        <use></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <svg>
+                        <use></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <svg>
+                        <use></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <svg>
+                        <use></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
