--- a/index.html
+++ b/index.html
@@ -45,11 +45,18 @@
         <ul class="header-contacts-list common-lists">
           <li class="header-mail-item">
             <a class="header-mail-link common-links" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+              ><svg class="mail-link-icon">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="header-tel-item">
-            <a class="header-tel-link common-links" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="header-tel-link common-links" href="tel:+380961111111">
+              <svg class="tel-link-icon">
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -70,25 +77,25 @@
       <section class="benefits-section section">
         <div class="container">
           <ul class="benefits-list common-lists">
-            <li class="benefits-item">
+            <li class="benefits-item icon-attention">
               <h3 class="benefits-title">Внимание к деталям</h3>
               <p class="benefits-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="benefits-item">
+            <li class="benefits-item icon-punctuality">
               <h3 class="benefits-title">Пунктуальность</h3>
               <p class="benefits-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="benefits-item">
+            <li class="benefits-item icon-planning">
               <h3 class="benefits-title">Планирование</h3>
               <p class="benefits-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="benefits-item">
+            <li class="benefits-item icon-technologies">
               <h3 class="benefits-title">Современные технологии</h3>
               <p class="benefits-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -139,11 +146,32 @@
               <div class="team-item-content">
                 <h4 class="name-title">Игорь Демьяненко</h4>
                 <p class="position" lang="en">Product Designer</p>
-                <ul>
-                  <li>
-                    <a href="">
-                      <svg>
-                        <use></use>
+                <ul class="social-list common-lists">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -155,6 +183,36 @@
               <div class="team-item-content">
                 <h4 class="name-title">Ольга Репина</h4>
                 <p class="position" lang="en">Frontend Developer</p>
+                <ul class="social-list common-lists">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -162,6 +220,36 @@
               <div class="team-item-content">
                 <h4 class="name-title">Николай Тарасов</h4>
                 <p class="position" lang="en">Marketing</p>
+                <ul class="social-list common-lists">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -169,7 +257,86 @@
               <div class="team-item-content">
                 <h4 class="name-title">Михаил Ермаков</h4>
                 <p class="position" lang="en">UI Designer</p>
+                <ul class="social-list common-lists">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link common-links">
+                      <svg class="social-list-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="client section">
+        <div class="container">
+          <h2 class="client-title">Постоянные клиенты</h2>
+          <ul class="client-list common-lists">
+            <li class="client-item">
+              <a class="client-list-link common-links" href="">
+                <svg class="client-list-icon">
+                  <use href="./images/icons.svg#icon-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-list-link common-links" href="">
+                <svg class="client-list-icon">
+                  <use href="./images/icons.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-list-link common-links" href="">
+                <svg class="client-list-icon">
+                  <use href="./images/icons.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-list-link common-links" href="">
+                <svg class="client-list-icon">
+                  <use href="./images/icons.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-list-link common-links" href="">
+                <svg class="client-list-icon">
+                  <use href="./images/icons.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-list-link common-links" href="">
+                <svg class="client-list-icon">
+                  <use href="./images/icons.svg#icon-logo-5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -177,35 +344,72 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-      <div class="container">
+      <div class="container flex-footer">
         <!--Footer logo-->
-        <a class="footer-logo-link common-links" href="./index.html" lang="en"
-          ><span class="footer-logo-web">Web</span>Studio</a
-        >
-        <!--Address-->
-        <address>
-          <ul class="address-list common-lists">
-            <li class="address-item">
-              <a
-                class="address-map-link common-links"
-                href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42707410898921%2C30.53826807734482&z=17"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г.Киев, пр-т Леси Украинки, 26
+        <div class="footer-list">
+          <a class="footer-logo-link common-links" href="./index.html" lang="en"
+            ><span class="footer-logo-web">Web</span>Studio</a
+          >
+          <!--Address-->
+
+          <address class="address">
+            <ul class="address-list common-lists">
+              <li class="address-item">
+                <a
+                  class="address-map-link common-links"
+                  href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42707410898921%2C30.53826807734482&z=17"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г.Киев, пр-т Леси Украинки, 26
+                </a>
+              </li>
+              <li class="address-item">
+                <a class="address-mail-link common-links" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="address-tel-link common-links" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="invitation-social">
+          <h5 class="invitation-title">Присоединяйтесь</h5>
+          <ul class="invitation-social-list common-lists">
+            <li class="invitation-social-item">
+              <a class="invitation-social-link common-links" href="">
+                <svg class="invitation-social-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
-            <li class="address-item">
-              <a class="address-mail-link common-links" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li class="invitation-social-item">
+              <a class="invitation-social-link common-links" href="">
+                <svg class="invitation-social-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-item">
-              <a class="address-tel-link common-links" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="invitation-social-item">
+              <a class="invitation-social-link common-links" href="">
+                <svg class="invitation-social-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="invitation-social-item">
+              <a class="invitation-social-link common-links" href="">
+                <svg class="invitation-social-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
