--- a/portfolio.html
+++ b/portfolio.html
@@ -43,11 +43,17 @@
         <ul class="header-contacts-list common-lists">
           <li class="header-mail-item">
             <a class="header-mail-link common-links" href="mailto:info@devstudio.com"
+              ><svg class="mail-link-icon">
+                <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="header-tel-item">
-            <a class="header-tel-link common-links" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="header-tel-link common-links" href="tel:+380961111111"
+              ><svg class="tel-link-icon">
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -161,35 +167,72 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-      <div class="container">
+      <div class="container flex-footer">
         <!--Footer logo-->
-        <a class="footer-logo-link common-links" href="./index.html" lang="en"
-          ><span class="footer-logo-web">Web</span>Studio</a
-        >
-        <!--Address-->
-        <address>
-          <ul class="address-list common-lists">
-            <li class="address-item">
-              <a
-                class="address-map-link common-links"
-                href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42707410898921%2C30.53826807734482&z=17"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г.Киев, пр-т Леси Украинки, 26
+        <div class="footer-list">
+          <a class="footer-logo-link common-links" href="./index.html" lang="en"
+            ><span class="footer-logo-web">Web</span>Studio</a
+          >
+          <!--Address-->
+
+          <address class="address">
+            <ul class="address-list common-lists">
+              <li class="address-item">
+                <a
+                  class="address-map-link common-links"
+                  href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42707410898921%2C30.53826807734482&z=17"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г.Киев, пр-т Леси Украинки, 26
+                </a>
+              </li>
+              <li class="address-item">
+                <a class="address-mail-link common-links" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="address-tel-link common-links" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="invitation-social">
+          <h5 class="invitation-title">Присоединяйтесь</h5>
+          <ul class="invitation-social-list common-lists">
+            <li class="invitation-social-item">
+              <a class="invitation-social-link common-links" href="">
+                <svg class="invitation-social-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
-            <li class="address-item">
-              <a class="address-mail-link common-links" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li class="invitation-social-item">
+              <a class="invitation-social-link common-links" href="">
+                <svg class="invitation-social-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-item">
-              <a class="address-tel-link common-links" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="invitation-social-item">
+              <a class="invitation-social-link common-links" href="">
+                <svg class="invitation-social-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="invitation-social-item">
+              <a class="invitation-social-link common-links" href="">
+                <svg class="invitation-social-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
